objects/Pay_Pal_Account__c.object
<CustomObject>
    <fields>
        <fullName>Accept_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_types__c</fullName>
        <label>Account types</label>
        <picklist>
            <picklistValues>
                <fullName>PayPal Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TrustCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorize.Net</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AuthorizationDotNetKey__c</fullName>
        <label>AuthorizationDotNetKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizationDotNet__c</fullName>
        <label>AuthorizationDotNet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Address__c</fullName>
        <label>Check Address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_Paypal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Paypal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Pay Pal Account</relationshipLabel>
        <relationshipName>Pay_Pal_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Payer__c</fullName>
        <label>Fee Payer</label>
        <picklist>
            <controllingField>Payment_Type__c</controllingField>
            <picklistValues>
                <fullName>EACHRECEIVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIMARYRECEIVER</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SENDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECONDARYONLY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Check_for_Eventadmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Check for Eventadmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Amount_for_Paypal__c</fullName>
        <label>Max Amount for Paypal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Amount_for_Paypal__c</fullName>
        <label>Min Amount for Paypal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OurEmail__c</fullName>
        <defaultValue>&quot;durga@globalnest.com&quot;</defaultValue>
        <label>OurEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parallel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chained</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ppassword__c</fullName>
        <label>Paypal password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psignature__c</fullName>
        <label>Paypal Signature</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PuserName__c</fullName>
        <label>paypal userName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_Url__c</fullName>
        <label>Redirect Url</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StripeKey__c</fullName>
        <label>StripeKey</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>check_amount_Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>check amount Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTest</label>
        <type>Checkbox</type>
    </fields>
    <label>Pay Pal Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Event__c</columns>
        <columns>OurEmail__c</columns>
        <columns>NAME</columns>
        <columns>Email_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Pay-{0000}</displayFormat>
        <label>Pay Pal Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Pal Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>